# earnings-summary-app

./: README.md  app.py  earnings_call_functions.py  pyproject.toml  requirements.txt  tickers_to_keep.csv
reports/: CRM_Q4_FY2026_earnings_call.md
