[project]
name = "equity-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "asyncio>=4.0.0",
    "chromium>=0.0.0",
    "datetime>=6.0",
    "display>=1.0.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "edgartools[ai]>=5.13.0",
    "gradio>=6.6.0",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "markdownify>=1.2.2",
    "openai>=2.16.0",
    "openai-agents>=0.7.0",
    "pandas>=3.0.0",
    "pathlib>=1.0.1",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "resend>=2.23.0",
    "yfinance>=1.1.0",
]
